--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "nodemon": "^3.1.9",
     "pg": "^8.13.3"
   },
   "description": ""
