--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha basicCRUDSuite.spec.js",
+    "test:watch": "nodemon --watch . --ext js --exec \"npm run test\"",
+    "coverage": "c8 mocha basicCRUDSuite.spec.js",
+    "coverage:html": "c8 --reporter=html mocha basicCRUDSuite.spec.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +20,13 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "pg": "^8.13.3"
+    "pg": "^8.13.3",
+    "selenium-webdriver": "^4.31.0"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "c8": "^10.1.3",
+    "mocha": "^11.1.0",
+    "nodemon": "^3.1.9"
+  }
 }
